--- a/Classement.html
+++ b/Classement.html
@@ -54,6 +54,42 @@
             <td>05/01/2023</td>
             <td>250</td>
             <td>300</td>
+            <tr>
+            <td>Jane Smith</td>
+            <td>05/01/2023</td>
+            <td>250</td>
+            <td>300</td>
+          </tr><tr>
+            <td>Jane Smith</td>
+            <td>05/01/2023</td>
+            <td>250</td>
+            <td>300</td>
+          </tr><tr>
+            <td>Jane Smith</td>
+            <td>05/01/2023</td>
+            <td>250</td>
+            <td>300</td>
+          </tr><tr>
+            <td>Jane Smith</td>
+            <td>05/01/2023</td>
+            <td>250</td>
+            <td>300</td>
+          </tr><tr>
+            <td>Jane Smith</td>
+            <td>05/01/2023</td>
+            <td>250</td>
+            <td>300</td>
+          </tr><tr>
+            <td>Jane Smith</td>
+            <td>05/01/2023</td>
+            <td>250</td>
+            <td>300</td>
+          </tr><tr>
+            <td>Jane Smith</td>
+            <td>05/01/2023</td>
+            <td>250</td>
+            <td>300</td>
+          </tr>
           </tr>
           <!-- Ajoute d'autres lignes ici avec plus de données -->
         </tbody>
